--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Auto build new list
 
 on:
   schedule:
-    - cron: "*/2 * * * *"
+    - cron: "20 1 */2 * *"
 jobs:
   build:
     runs-on: ubuntu-latest
