--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add . -a
+          git add . -A
           git commit -m "Auto renew list." -a
       - name: Push changes
         uses: ad-m/github-push-action@master
