--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
           git config --local user.name "GitHub Action"
           git add . -A
           git commit -m "Auto renew list." -a
+      - name: Check commit result
+        if: ${{ failure() }}
+        run: echo "There are no changes in the commit step." && exit 0
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
