--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add . -A
-          git commit -m "Auto renew list." -a
-          if [ $? -ne 0 ]; then
+          if [[ -z $(git status -s) ]]; then
               echo "There are no changes in the commit step." && exit 0
           fi
+          git commit -m "Auto renew list." -a
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
